FS_BUNDLEPREFIX = /Library/Filesystems
FS_BUNDLEDIR = $(DESTDIR)$(FS_BUNDLEPREFIX)/zfs.fs
PKGINFO = PkgInfo
INFO_PLIST = Info.plist
INFOPLIST_STRINGS = InfoPlist.strings

include $(srcdir)/%D%/InvariantDisks/Makefile.am
include $(srcdir)/%D%/zconfigd/Makefile.am
include $(srcdir)/%D%/zfs_util/Makefile.am
include $(srcdir)/%D%/zsysctl/Makefile.am
include $(srcdir)/%D%/mount_zfs/Makefile.am
